# IT4063C.github.io

./: .gitignore  404.html  Pipfile  README.md  assignments.html  blog.html  course-notes.html  credits.html  docusaurus.config.js  index.html  instructor.html  package-lock.json  package.json  pyproject.toml  search-index.json  search.html  sitemap.xml  slides.html  ta.html  youtube-sxQaBpKfDRk.txt
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
assets/css/: styles.7a3eb222.css  styles.9ccf0d16.css  styles.f17a918e.css  styles.f1b99d43.css  styles.fe5d5780.css
assets/js/: 00d1def1.06bba47f.js  00d1def1.34f42933.js  00d1def1.7dfdadad.js  00d1def1.8a4de949.js  00d1def1.f02ecf3c.js  00d1def1.f47e968c.js  00d9cbdd.76399f7f.js  00d9cbdd.cf9eb17e.js  01a85c17.19f9f8d5.js  01a85c17.67f0c5de.js  (+625 more)
assignments/: EDA-exercises.html  final-project.html  python-exercises.html
blog/: archive.html  atom.xml  authors.yml  break-down-problems.html  installing-pipenv.html  rss.xml  tags.html  warm-cool-hard.html
course-notes/: classification.html  data-analytics.html  dev-env.html  eda.html  git.html  installation-guides.html  ml-end-to-end.html  ml-regression.html  ml.html  refreshers.html  visualizations.html
guides/: FAQ.html  code-style.html  contribution.html  datasets.html  installation-guides.html  misc.html  resources.html
instructor/: code-snippets.html  links.html  weekly-modules.html
syllabus/: UC-policies.html  course-outline.html  grading.html  info.html  need-help.html  policies.html  resources.html  sla.html
(+120 files in other folders)
