[tool.poetry]
name = "it4063c.github.io"
version = "0.1.0"
description = ""
authors = ["Yahya Gilany <yahya.gilany@live.com>"]

[tool.poetry.dependencies]
python = "^3.11"

altair = "^4.2.0"
vega_datasets = "^0.9.0"
pandas = "^1.4.3"
numpy = "^1.23.1"

watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]
nbdoc = "0.0.54"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.1"

[tool.poetry.extras]
watchdog = ["watchmedo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
